--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>نموذج المطوية المدرسية</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
+        /* نفس الـ CSS، لا تغيير */
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; padding: 15px; margin: 0; background-color: var(--tg-theme-bg-color ); color: var(--tg-theme-text-color); }
         .container { max-width: 600px; margin: 0 auto; }
         h1 { text-align: center; margin-bottom: 20px; }
@@ -24,7 +25,7 @@
             <div class="form-group"><label for="student">اسم الطالب *</label><input type="text" id="student" required></div>
             <div class="form-group"><label for="school">اسم المدرسة</label><input type="text" id="school"></div>
             <div class="form-group"><label for="teacher">اسم المعلم</label><input type="text" id="teacher"></div>
-            <button type="submit">تجهيز بيانات المطوية</button>
+            <button type="submit">إرسال البيانات</button>
         </form>
     </div>
 
@@ -32,6 +33,9 @@
         window.addEventListener('load', function() {
             const tg = window.Telegram.WebApp;
             tg.ready();
+
+            // اسم المستخدم الخاص ببوتك بدون @
+            const botUsername = "theSmartFolderbot"; 
 
             document.getElementById('brochureForm').addEventListener('submit', function(e) {
                 e.preventDefault();
@@ -53,8 +57,14 @@
                     if (value) { dataString += `${label}: ${value}\n`; }
                 }
 
-                // استخدام الآلية الناجحة
-                tg.switchInlineQuery(dataString, []);
+                // **الحل النهائي: نستخدم رابط t.me مع ترميز النص**
+                const encodedText = encodeURIComponent(dataString);
+                const telegramUrl = `https://t.me/${botUsername}?text=${encodedText}`;
+
+                // هذه الدالة تفتح الرابط، مما يؤدي إلى فتح شاشة الدردشة مع النص المجهز
+                tg.openTelegramLink(telegramUrl );
+                
+                // لا نحتاج لإغلاق النافذة، لأن فتح الرابط سيقوم بذلك
             });
         });
     </script>
